<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/download7" />

    <TextView
        android:id="@+id/textViewTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/target4"
        android:textColor="	#000000"
        android:layout_marginTop="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewEquipments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eq1"
        android:textColor="	#000000"
        android:layout_marginTop="10dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_start"
        android:text="@string/start" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_start"
        android:layout_marginTop="10dp"
        android:text="@string/prev" />

</LinearLayout>
