<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewBicep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ex3"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageViewSqueezePress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/download5" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="1:00"
        android:textAlignment="center"
        android:textSize="50sp" />

    <Button
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/timer" />

    <TextView
        android:id="@+id/textViewOnline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/click"
        android:textAllCaps="true"
        android:textColor="	#800000"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/end" />
</LinearLayout>
